examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/check_inl_reconstruct.st
language core;

extend with #type-reconstruction, #sum-types;


fn main(succeed : Bool) -> Nat+Bool {
  return inl(true)
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
